@@ -33,6 +33,7 @@
 #include "../gui/combobox.h"
 #include "../gui/stringmapwidget.h"
 #include "../utils/string_utils.h"
+#include "../utils/tellico_utils.h"
 #include "../utils/lccnvalidator.h"
 #include "../utils/isbnvalidator.h"
 #include "../utils/datafileregistry.h"
@@ -133,14 +134,17 @@ void SRUFetcher::search() {
   u.setScheme(m_scheme);
   u.setHost(m_host);
   u.setPort(m_port);
-  u = QUrl::fromUserInput(u.url() + m_path);
+  u.setPath(m_path);
 
-  QString cqlVersion;
+  QString httpMethod, cqlVersion;
   QUrlQuery query;
   for(StringMap::ConstIterator it = m_queryMap.constBegin(); it != m_queryMap.constEnd(); ++it) {
-    // query values starting with x-tellico signify query context set replacements
-    // and not query values themselves
+    // query values starting with x-tellico signify tellico-specific options or
+    // query context set replacements and not query values themselves
     if(it.key().startsWith(QLatin1String("x-tellico"))) {
+      if(it.key().endsWith(QLatin1String("-method"))) {
+        httpMethod = it.value();
+      }
       continue;
     }
     query.addQueryItem(it.key(), it.value());
@@ -263,11 +267,18 @@ void SRUFetcher::search() {
       stop();
       break;
   }
-  myLog() << "SRU query is" << query.toString();
+  myLog() << "SRU query:" << query.toString();
   u.setQuery(query);
-//  myDebug() << u.url();
 
-  m_job = KIO::storedGet(u, KIO::NoReload, KIO::HideProgressInfo);
+  if(QString::compare(httpMethod, QLatin1String("post"), Qt::CaseInsensitive) == 0) {
+    myLog() << "POSTing SRU request:" << u.url();
+    m_job = KIO::storedPut(query.toString().toUtf8(), u, -1, KIO::HideProgressInfo);
+  } else {
+    // default to get
+    myLog() << "GETing SRU request:" << u.url();
+    m_job = KIO::storedGet(u, KIO::NoReload, KIO::HideProgressInfo);
+  }
+  Tellico::addUserAgent(m_job);
   KJobWidgets::setWindow(m_job, GUI::Proxy::widget());
   connect(m_job.data(), &KJob::result,
           this, &SRUFetcher::slotComplete);
@@ -295,6 +306,7 @@ void SRUFetcher::slotComplete(KJob*) {
 
   QByteArray data = m_job->data();
   if(data.isEmpty()) {
+    myDebug() << "no data";
     stop();
     return;
   }
@@ -388,7 +400,17 @@ void SRUFetcher::slotComplete(KJob*) {
              m_format == QLatin1String("dublincore") ||
              m_format == QLatin1String("none")) &&
             initHandler(SRW)) {
-    Import::TellicoImporter imp(m_handlers[SRW]->applyStylesheet(result));
+    const auto tellicoXml = m_handlers[SRW]->applyStylesheet(result);
+#if 0
+    myWarning() << "Remove debug from srufetcher.cpp";
+    QFile f(QString::fromLatin1("/tmp/test-sru.xml"));
+    if(f.open(QIODevice::WriteOnly)) {
+      QTextStream t(&f);
+      t << tellicoXml;
+    }
+    f.close();
+#endif
+    Import::TellicoImporter imp(tellicoXml);
     coll = imp.collection();
     if(!msg.isEmpty()) {
       msg += QLatin1Char('\n');
